Change names on title page.

--- a/master-thesis-report/preamble.tex
+++ b/master-thesis-report/preamble.tex
@@ -241,25 +241,35 @@
     {\bfseries\Huge \thesistitle \par
     \Large \vspace{0.1in} \thesissubtitle \par}
     
-    \vspace{0.6in}
+    \vspace{0.2in}
 %     {\Large Home University \par}
     {\Large Masterarbeit der Philosophisch-naturwissenschaftlichen Fakult\"{a}t \\
             der Universit\"{a}t Bern \par}
 
-	\vspace{0.6in}
+	\vspace{0.2in}
 	{\Large vorgelegt von \par
     \Large \vspace{0.1in} \textbf{\thesisauthor} \par}          
           
-    \vspace{0.6in}
+    \vspace{0.2in}
     {\Large \thesisdate \par}
             
-    \vfill
+   
     \vspace{0.5in}
-	{\Large Leiterin der Arbeit \par
-    \Large \vspace{0.1in} \textbf{\thesisleiter} \par}
+	{\Large Supervisor \par
+    \Large \vspace{0.1in} \textbf{\thesisleiter} \par
+    \Large \vspace{0.1in} HumanTech Institute, University of Applied Sciences of Western Switzerland \par}
+    
+    \vspace{0.2in}
+	{\Large Supervisor \par
+    \Large \vspace{0.1in} \textbf{Prof. Dr. D. Lalanne} \par
+    \Large \vspace{0.1in} Human-IST Institute, University of Fribourg \par}
+    
+    \vspace{0.2in}
+	{\Large Supervisor \par
+    \Large \vspace{0.1in} \textbf{Jacky Casas} \par
+    \Large \vspace{0.1in} HumanTech Institute, University of Applied Sciences of Western Switzerland \par}
   
-
-  \vspace{0.9in}
+  \vfill
  
   % === Logos ==============================================     
   \begin{figure}[htp]
